[CacheStorageCache] Close Entry* if the CacheStorageCache is gone

BUG=697507

Review-Url: https://codereview.chromium.org/2727703002
Cr-Commit-Position: refs/heads/master@{#454000}

Former-commit-id: 06f7d73f2487d1e57b56117811735c002b90bc33